tests/failing/invalid_type.dodo
// Expected: Expected token Identifier, but got Fn

fn main() {
    let x: fn = 12;
}
